<resources>
    <string name="title_activity_main">MainActivity</string>
    <string name="button">Button</string>
    <string name="hint">Enter text</string>
    <string name="textview">TextView</string>
    <string name="next" />
    <string name="Next">Next</string>
    <string name="button2">Prev</string>
    <string name="button3">Next\n</string>
    <string name="left_top">Left Top</string>
    <string name="right_bottom">Right Bottom</string>
    <string name="prev">Prev</string>
    <string name="next1">Next</string>
    <string name="first_text">First Text!</string>
    <string name="second_text">Second Text</string>
    <string name="button4">Button</string>
    <string name="button7">Prev</string>
</resources>